deploy/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-cnpool
  failurePolicy: Fail
  name: mcnpool.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cnpools
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-cnset
  failurePolicy: Fail
  name: mcnset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cnsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-dnset
  failurePolicy: Fail
  name: mdnset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dnsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-logset
  failurePolicy: Fail
  name: mlogset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - logsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-matrixonecluster
  failurePolicy: Fail
  name: mmatrixonecluster.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - matrixoneclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-proxyset
  failurePolicy: Fail
  name: mproxyset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - proxysets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-core-matrixorigin-io-v1alpha1-webui
  failurePolicy: Fail
  name: mwebui.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - webuis
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-cnpool
  failurePolicy: Fail
  name: vcnpool.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cnpools
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-cnset
  failurePolicy: Fail
  name: vcnset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cnsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-dnset
  failurePolicy: Fail
  name: vdnset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dnsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-logset
  failurePolicy: Fail
  name: vlogset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - logsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-matrixonecluster
  failurePolicy: Fail
  name: vmatrixonecluster.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - matrixoneclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-proxyset
  failurePolicy: Fail
  name: vproxyset.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - proxysets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-core-matrixorigin-io-v1alpha1-webui
  failurePolicy: Fail
  name: vwebui.kb.io
  rules:
  - apiGroups:
    - core.matrixorigin.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - webuis
  sideEffects: None
